feat(volume): support creation-only guest permissions
