# internal/generated/models/api_volume_initial_permissions.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag/jsonutils"
+)
+
+// APIVolumeInitialPermissions api volume initial permissions
+//
+// swagger:model api.VolumeInitialPermissions
+type APIVolumeInitialPermissions struct {
+
+	// GID is the initial guest group (0 means guest root).
+	// Example: 1000
+	Gid int64 `json:"gid,omitempty"`
+
+	// Mode is three or four octal digits, from 0000 through 7777.
+	// Example: 0700
+	Mode string `json:"mode,omitempty"`
+
+	// UID is the initial guest owner (0 means guest root).
+	// Example: 1000
+	UID int64 `json:"uid,omitempty"`
+}
+
+// Validate validates this api volume initial permissions
+func (m *APIVolumeInitialPermissions) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this api volume initial permissions based on context it is used
+func (m *APIVolumeInitialPermissions) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *APIVolumeInitialPermissions) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return jsonutils.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *APIVolumeInitialPermissions) UnmarshalBinary(b []byte) error {
+	var res APIVolumeInitialPermissions
+	if err := jsonutils.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
